--- a/accounts/templates/accounts/forms.html
+++ b/accounts/templates/accounts/forms.html
@@ -1,8 +1,12 @@
 {% extends 'accounts/main.html' %} {% load static %} {% block content %}
 <div class="card" style="width: 50rem; margin-left: 300px">
   <div class="card-body">
+  <h1>Customer: {{customer.name}}</h1>
+  <hr>
+
     <form action="" method="POST">
       {% csrf_token %}
+
       {{formset.management_form }}
       {% for form in formset %}
       {{form}}
@@ -12,9 +16,10 @@
       {% for form in forms %}
       {{form}}
       <hr>
-      {% endfor %}      
-      
+      {% endfor %}
+
       <button type="submit" class="btn btn-primary" name='submit' method='POST'>Submit</button>
+      <hr>
     </form>
   </div>
 </div>
