--- a/accounts/templates/accounts/products.html
+++ b/accounts/templates/accounts/products.html
@@ -27,7 +27,7 @@
           <th scope="row">{{i.name}}</th>
           <td>{{i.category}}</td>
           <td>{{i.description}}</td>
-          <td>$ {{i.price}}</td>
+          <td>&#8377; {{i.price}}</td>
           <td><img src="{{i.image}}" alt="image" style="width:100px;"></td>
         </tr>
         {% endfor %}
