--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -1,8 +1,8 @@
 {% extends 'accounts/main.html' %} {% block content %}
 
-<div class="row">
+<div class="row" id='card'>
   <div class="col-sm-4">
-    <div class="card">
+    <div class="card" id='heading'>
       <div class="card-body">
         <h5 class="card-title">Total ordered</h5>
         <hr />
@@ -11,7 +11,7 @@
     </div>
   </div>
   <div class="col-sm-4">
-    <div class="card">
+    <div class="card" id='heading'>
       <div class="card-body">
         <h5 class="card-title">Ordered Delivered</h5>
         <hr />
@@ -20,7 +20,7 @@
     </div>
   </div>
   <div class="col-sm-4">
-    <div class="card">
+    <div class="card" id='heading'>
       <div class="card-body">
         <h5 class="card-title">Orders Pending</h5>
         <hr />
