--- a/accounts/templates/accounts/main.html
+++ b/accounts/templates/accounts/main.html
@@ -14,7 +14,7 @@
   <title>Shop</title>
 </head>
   </head>
-  <body id="whitesmoke">
+  <body>
     {% include 'accounts/navbar.html' %}
 {% block content %}
 
