--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -36,10 +36,10 @@
       <div class="card-body text-center">
         <h5 class="card-title">customers</h5>
         <p class="card-text">Find all your customers here.</p>
-        <a href="#" class="btn btn-primary">Create customer</a>
+        <a href="#" class="btn btn-info">Create customer</a>
         <hr>
         <table class="table table-hover">
-          <thead class='thead-dark'>
+          <thead class='thead-light'>
             <tr>
               <th scope="col">customer</th>
               <th scope="col">email</th>
@@ -65,7 +65,7 @@
         <h5 class="card-title">Last 5 orders</h5>
         <p class="card-text">Details of last five orders</p>
         <table class="table table-hover">
-          <thead class='thead-dark'>
+          <thead class='thead-light' >
             <tr>
               <th scope="col">Product</th>
               <th scope="col-2">Date Ordered</th>
