--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -1,75 +1,79 @@
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    {% load static %}
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href=" {% static '/css/main.css' %} " />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Work+Sans&amp;display=swap"
-      rel="stylesheet"
-    />
-    <title>Shop</title>
-  </head>
+<html lang="en"><head>
+    
+<!-- Required meta tags -->
 
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <!-- Font Awesome -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+<!-- Google Fonts -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+<!-- Bootstrap core CSS -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
+<!-- Material Design Bootstrap -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="/static/css/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans&amp;display=swap" rel="stylesheet">
+  <title>Shop</title>
+</head>
+  
   <body class="text-center">
+    
     <!-- Custom styles for this template -->
-    <link href=" {% static '/css/login.css' %} " rel="stylesheet" />
-
+    <link href=" /static/css/login.css " rel="stylesheet">
+  
+  
     <form class="form-signin" method="POST">
-      {% csrf_token %}
-      <img class="mb-4" src="" alt="" width="72" height="72" />
-      <h1 class="h3 mb-3 font-weight-normal">Sign up here</h1>
-
-      {{form.username.label}}
+    {% csrf_token %}
+  <img class="mb-4" src="/docs/4.5/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+  <h1 class="h3 mb-3 font-weight-normal">Please sign up</h1>
+  <div class="form-row mb-2">
+        <div class="col">
+        <div >
+          {{form.username.label}}
       <p>{{form.username}}</p>
       {{form.email.label}}
       <p>{{form.email}}</p>
-      {{form.password1.label}}
-      <p>{{form.password1}}</p>
-      {{form.password2.label}}
-      <p>{{form.password2}}</p>
-      <div class="checkbox mb-3">
-        <label>
-          <input type="checkbox" value="remember-me" /> Remember me
-        </label>
-      </div>
-      <button class="btn btn-lg btn-primary btn-block" type="submit">
-        Sign in
-      </button>
-      
-        
-        <div class="alert alert-primary" role="alert">
-          <strong>
-          {{form.errors}}
-            {% for message in messages %}
-            <p>{{message}}</p>
-            {% endfor %}
-          </strong>
-        </div>
-        <p class="mt-5 mb-3 text-muted">© 2017-2020</p>
-        Already a member?
-        <a href="{% url 'login' %}">Log in.</a>
-      </td>
-    </form>
+         {{form.password1.label}}
+        <p>{{form.password1}}</p>
+     {{form.password2.label}}
+       <p>{{form.password2}}</p>
+       </div>
+        </div>    <!-- Last name -->
+            
+    </div>
+  <div class="checkbox mb-3">
+    <label>
+    <hr>
+    {% for message in messages  %}
+  <p style="color: red;"><i>{{message}}</i></p>
+  {% endfor %}
+      <input type="checkbox" value="remember-me"> Remember me
+    </label>
+  </div>
+  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+  <p class="mt-5 mb-3 text-muted">© 2017-2020</p>
+  Not a member?
+  <a href="{% url 'login' %}">Log in.</a>
+  
+</form>
+
+
 
     <!-- Optional JavaScript; choose one of the two! -->
 
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-      crossorigin="anonymous"
-    ></script>
-  </body>
-</html>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
+<!-- JQuery -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<!-- Bootstrap tooltips -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
+<!-- Bootstrap core JavaScript -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+<!-- MDB core JavaScript -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"></script>
+</body></html>
+
+     
