fixed form bugs

--- a/accounts/templates/accounts/forms.html
+++ b/accounts/templates/accounts/forms.html
@@ -1,7 +1,7 @@
 {% extends 'accounts/main.html' %} {% load static %} {% block content %}
 <div class="card" style="width: 50rem; margin-left: 300px">
   <div class="card-body">
-  <h1>{{customer.name}}, choose your order here </h1>
+  <h1>{{customer.name}}'s orders </h1>
   <hr>
 
     <form action="" method="POST">
