--- a/accounts/templates/accounts/main.html
+++ b/accounts/templates/accounts/main.html
@@ -19,7 +19,7 @@
   <title>Shop</title>
 </head>
   </head>
-  <body>
+  <body class="">
     {% include 'accounts/navbar.html' %}
 {% block content %}
 
