--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -28,8 +28,8 @@
     {% csrf_token %}
   <img class="mb-4" src="/docs/4.5/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
   <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-  <label for="inputEmail" class="sr-only">Email address</label>
-  <input type="text" id="inputEmail" class="form-control" placeholder="username" name="username">
+  <label for="username" class="sr-only">Username</label>
+  <input type="text" id="username" class="form-control" placeholder="username" name="username">
   <label for="inputPassword" class="sr-only">Password</label>
   <input type="password" id="inputPassword" class="form-control" placeholder="Password" name="password">
   <div class="checkbox mb-3">
