added search bar migrated to postgres

--- a/accounts/templates/accounts/customer_profile.html
+++ b/accounts/templates/accounts/customer_profile.html
@@ -36,7 +36,7 @@
           <div class="col-lg-4 mb-4">
 
             <!-- Card -->
-            <div class="card card-cascade narrower winter-neva-gradient">
+            <div class="card card-cascade narrower ">
 
               <!-- Card image -->
               <div class="view view-cascade gradient-card-header mdb-color lighten-3">
@@ -66,7 +66,7 @@
               <!-- Card image -->
 
               <!-- Card content -->
-              <div class="card-body card-body-cascade text-center winter-neva-gradient">
+              <div class="card-body card-body-cascade text-center ">
 
                 <!-- Edit Form -->
                 <form method="POST" enctype="multipart/form-data">
