--- a/accounts/templates/accounts/products.html
+++ b/accounts/templates/accounts/products.html
@@ -20,9 +20,7 @@
 <br>
 <form class="form-inline">
   <div class="form-group mx-sm-1 mb-2 col-10">
-  <hr>
-   <h5>{{product_filter.form.name.label}}:&nbsp;</h5> 
-    {{product_filter.form.name}}
+
    <hr>
     <hr>
     <h5>{{product_filter.form.tag.label}}:&nbsp;</h5>
@@ -37,14 +35,15 @@
     {{product_filter.form.price}}
     <hr>
 
-    <button type="submit" class="btn btn-primary" >Search</button>
+    <button type="submit" class="btn btn-primary btn-sm" >Apply filters</button>
   </div>
 </form>
 
     <hr>
     <br>
+    <div class="card " style="padding: 30px;">
       <!--Section: Products v.3-->
-      <section class="text-center mb-4">
+      <section class="text-center mb-3 ">
 
         <!--Grid row-->
         <div class="row wow fadeIn">
@@ -92,7 +91,7 @@
             <!--Card-->
 
           </div>
-          <!--Grid column-->
+          </div><!--Grid column-->
 {% endfor %}
          
          
