added some user data

--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -59,8 +59,8 @@
   </div>
   <div class="col">
       <div class="card-body text-center">
-        <h5 class="card-title">Last 5 orders</h5>
-        <p class="card-text">Details of last five orders</p>
+        <h5 class="card-title">All orders</h5>
+        <p class="card-text">Details of all the orders</p>
         <table class="table table-hover" style="overflow-x:auto;">
           <thead class='thead-light' >
             <tr>
