--- a/accounts/templates/accounts/navbar.html
+++ b/accounts/templates/accounts/navbar.html
@@ -38,7 +38,7 @@
      <li class="nav-item active active" style="font-size: 20px; color: white; padding-right:10px;padding-left:400px; padding-top:10px;"><i>Hello, {{request.user}}.</i> </li>
     </ul>
     <form class="form-inline my-2 my-lg-0" method="GET">
-    {{product_filter.form.name}}{{ my_filter.form.product}}{{customer_filter.form.name}}
+    {{product_filter.form.name}}{{ my_filter.form.name}}{{customer_filter.form.name}}
       <button class="btn btn-outline-dark btn-sm" type="submit">
         Search
       </button>
