--- a/accounts/templates/accounts/products.html
+++ b/accounts/templates/accounts/products.html
@@ -20,8 +20,6 @@
 <br>
 <form class="form-inline">
   <div class="form-group mx-sm-1 mb-2 col-10">
-
-   <hr>
     <hr>
     <h5>{{product_filter.form.tag.label}}:&nbsp;</h5>
     {{product_filter.form.tag}}
@@ -35,15 +33,14 @@
     {{product_filter.form.price}}
     <hr>
 
-    <button type="submit" class="btn btn-primary btn-sm" >Apply filters</button>
+    <button type="submit" class="btn btn-primary btn-sm " >Apply Filter</button>
   </div>
 </form>
 
     <hr>
     <br>
-    <div class="card " style="padding: 30px;">
       <!--Section: Products v.3-->
-      <section class="text-center mb-3 ">
+      <section class="text-center mb-4">
 
         <!--Grid row-->
         <div class="row wow fadeIn">
@@ -91,7 +88,7 @@
             <!--Card-->
 
           </div>
-          </div><!--Grid column-->
+          <!--Grid column-->
 {% endfor %}
          
          
