--- a/accounts/templates/accounts/products.html
+++ b/accounts/templates/accounts/products.html
@@ -21,6 +21,8 @@
 <form class="form-inline">
   <div class="form-group mx-sm-1 mb-2 col-10">
     <hr>
+    {{product_filter.form.name}}
+    <hr>
     <h5>{{product_filter.form.tag.label}}:&nbsp;</h5>
     {{product_filter.form.tag}}
    <hr>
